testdata/golden/sema/valid/entrypoint/no_mode_default_params.fmt
// Test: @entrypoint without mode but all params have defaults is valid
@entrypoint
fn main(x: int = 10, y: string = "hello") {
}
