testdata/golden/sema/invalid/entrypoint/no_mode_required_param.fmt
// Test: @entrypoint without mode but param without default is invalid
// Expected: SEM3122
@entrypoint
fn main(x: int) {
}
